Added SiphraAcquisition class to handle acquisitions more comfortably

--- a/noteboks/CT_Cs137_calib.ipynb
+++ b/noteboks/CT_Cs137_calib.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1b3d1721-b1d7-4c84-aa16-7d0dd20c2916",
    "metadata": {},
    "outputs": [],
@@ -12,9 +12,13 @@
     "import numpy as np\n",
     "import os\n",
     "import sys\n",
+    "import ipynbname\n",
+    "from pathlib import Path\n",
     "\n",
-    "project_root = os.path.abspath(os.path.join(os.getcwd(),\"..\"))\n",
+    "project_root = str(ipynbname.path().parent.parent)\n",
     "sys.path.append(project_root)\n",
+    "\n",
+    "from processing import SiphraAcquisition, fit_peak_expbg\n",
     "\n",
     "# ROOT.gROOT.SetBatch(False)\n",
     "# ROOT.gEnv.SetValue(\"Canvas.ShowEventStatus\", 1)\n",
@@ -25,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8d28291e-86ef-46db-903e-fc8a7140859f",
    "metadata": {},
    "outputs": [],
@@ -36,6 +40,19 @@
     "# Energy emission peaks in MeV\n",
     "K40_MEV = 1.460\n",
     "TL208_MEV = 2.614"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c4d48cc9-d0d4-4750-b982-3097416889d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acq = SiphraAcquisition(project_root+'/data/260209/1_SiPM_ChannelsTest_Ch5-8_Ch2_CT_Thr1_cmisvoffset127_Background.csv',\n",
+    "                        active_chs=[2,4],\n",
+    "                        exposure_sec=119.634,\n",
+    "                        sipm_chs=\"5-8\")"
    ]
   },
   {
@@ -77,6 +94,221 @@
     "dfs = [dfs_SiPM14_BG, dfs_SiPM14_Cs137, dfs_SiPM58_BG, dfs_SiPM58_Cs137]\n",
     "data_SiPM_chs = ['1-4', '1-4', '5-8', '5-8']\n",
     "legend = ['Ch.2', 'Ch.6', 'Ch.10', 'Ch.14']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fb43e56f-ec35-4690-b0f1-2cef16671a15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [_ for _ in range(18)]\n",
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fc36c536-060d-4a47-b0da-171dce3444e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all(isinstance(_, int) and 0 <= _ <= 17 for _ in lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0ec08f1a-089f-473c-8c8f-760a08429b10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2ec80f48-93bc-42c4-84c0-0ed1a7220206",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import UserDict\n",
+    "import numpy as np\n",
+    "class ChDataDict(UserDict):\n",
+    "    def __setitem__(self, key, value):\n",
+    "        if not isinstance(key, int):\n",
+    "            raise TypeError(\"Key must be an integer\")\n",
+    "        if not isinstance(value, np.ndarray):\n",
+    "            raise TypeError(\"Value must be a numpy array\")\n",
+    "        super().__setitem__(key, value)\n",
+    "\n",
+    "chdata = ChDataDict({1: np.array([1, 2, 3]), 3: np.array([4, 5, 6])})\n",
+    "# chdata[1] = np.array([1,2,3])\n",
+    "# chdata[3] = np.array([4,5,6])\n",
+    "\n",
+    "chdata[3]\n",
+    "k = list(chdata.keys())\n",
+    "k[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7f9ea0c3-8e22-46be-82b7-4504869d5656",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m a = \u001b[32m2\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "a = 2\n",
+    "list(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7fa432a4-5fd8-4b48-8dca-4a3508b87a27",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list.append() takes exactly one argument (4 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m ll = []\n\u001b[32m      2\u001b[39m l = [\u001b[32m1\u001b[39m,\u001b[32m2\u001b[39m,\u001b[32m3\u001b[39m,\u001b[32m4\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mll\u001b[49m\u001b[43m.\u001b[49m\u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43ml\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m ll\n",
+      "\u001b[31mTypeError\u001b[39m: list.append() takes exactly one argument (4 given)"
+     ]
+    }
+   ],
+   "source": [
+    "ll = []\n",
+    "l = [1,2,3,4]\n",
+    "ll.append(l)\n",
+    "ll"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c0086d7c-0236-4115-90b3-acd952dfb302",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(project_root+'/data/260209/1_SiPM_ChannelsTest_Ch5-8_Ch2_CT_Thr1_cmisvoffset127_Background.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "30275d0f-bc73-4e72-b4ef-1ea9d5b38845",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "argument should be a str or an os.PathLike object where __fspath__ returns a str, not 'DataFrame'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpathlib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Path\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mPath\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Programs/miniconda3/envs/comcube/lib/python3.14/pathlib/__init__.py:150\u001b[39m, in \u001b[36mPurePath.__init__\u001b[39m\u001b[34m(self, *args)\u001b[39m\n\u001b[32m    148\u001b[39m             path = arg\n\u001b[32m    149\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(path, \u001b[38;5;28mstr\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m150\u001b[39m             \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[32m    151\u001b[39m                 \u001b[33m\"\u001b[39m\u001b[33margument should be a str or an os.PathLike \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    152\u001b[39m                 \u001b[33m\"\u001b[39m\u001b[33mobject where __fspath__ returns a str, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    153\u001b[39m                 \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mnot \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(path).\u001b[34m__name__\u001b[39m\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    154\u001b[39m         paths.append(path)\n\u001b[32m    155\u001b[39m \u001b[38;5;28mself\u001b[39m._raw_paths = paths\n",
+      "\u001b[31mTypeError\u001b[39m: argument should be a str or an os.PathLike object where __fspath__ returns a str, not 'DataFrame'"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "Path(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "69d52d14-dad7-406b-977e-63632046a53f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp = Path('/data/260209/1_SiPM_ChannelsTest_Ch5-8_Ch2_CT_Thr1_cmisvoffset127_Background.csv').resolve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7b35489f-8ca4-4f79-82e6-3db67e5037d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'.csv'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pp.suffix"
    ]
   }
  ],
