--- a/noteboks/baseline_subtraction.ipynb
+++ b/noteboks/baseline_subtraction.ipynb
@@ -100,6 +100,9 @@
     "ExecuteTime": {
      "end_time": "2026-02-10T09:43:25.401070Z",
      "start_time": "2026-02-10T09:43:24.995723Z"
+    },
+    "jupyter": {
+     "source_hidden": true
     }
    },
    "outputs": [
@@ -246,7 +249,11 @@
    "cell_type": "code",
    "execution_count": 63,
    "id": "4fe40546-908d-46cd-868c-f4c3e9bd0902",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -465,6 +472,14 @@
     "arr = np.array([1,2,3,4,5])\n",
     "arr[[True, True, True, False, False]]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cddfadfd-d1a7-4257-9712-15c6daf6d565",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
