Added sample datasets for easy testing

--- a/noteboks/baseline_subtraction.ipynb
+++ b/noteboks/baseline_subtraction.ipynb
@@ -1098,6 +1098,27 @@
     "err = (CS137_MEV - hist_clean_clb.GetFunction(\"gaus\").GetParameter(\"Mean\"))/CS137_MEV\n",
     "print(f\"Error in the location of Cs peak: {err*100:.1f}%\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "58f9c3b4-03c0-453a-9d37-cd9cd565ad5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FWHM=0.32   Energy resolution at 480MeV: 66.84%\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "sigma = 0.136089\n",
+    "FWHM = np.sqrt(8*np.log(2))*sigma\n",
+    "print(f\"{FWHM=:.2f}   Energy resolution at 480MeV: {FWHM*100/0.479418:.2f}%\")"
+   ]
   }
  ],
  "metadata": {
