New SiphraAcquisition functionality for loading metadata from json file has been tested and is now working

--- a/noteboks/baseline_subtraction.ipynb
+++ b/noteboks/baseline_subtraction.ipynb
@@ -20,9 +20,6 @@
     "ExecuteTime": {
      "end_time": "2026-02-10T09:37:32.276396Z",
      "start_time": "2026-02-10T09:37:32.169808Z"
-    },
-    "jupyter": {
-     "source_hidden": true
     }
    },
    "outputs": [],
@@ -38,7 +35,8 @@
     "project_root = str(ipynbname.path().parent.parent)\n",
     "sys.path.append(project_root)\n",
     "\n",
-    "from processing import SiphraAcquisition, fit_peak_expbg\n",
+    "from processing import SiphraAcquisition\n",
+    "from analysis import fit_peak_expbg\n",
     "\n",
     "# ROOT.gROOT.SetBatch(False)\n",
     "# ROOT.gEnv.SetValue(\"Canvas.ShowEventStatus\", 1)\n",
