Solved issue in json functionality

--- a/noteboks/etcTests/siphraAcq_test_json.ipynb
+++ b/noteboks/etcTests/siphraAcq_test_json.ipynb
@@ -49,8 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Metadata file found /home/oscar/Projects/SIPHRA_Testing/data/260225/1_SiPM_Ch1-4_Ch2_Ch5_8_Ch14_Background.json\n",
-      "exposure_sec=129.73262667655945\n"
+      "exposure_sec=1\n"
      ]
     }
    ],
@@ -69,7 +68,13 @@
     {
      "data": {
       "text/plain": [
-       "[2, 14]"
+       "{'filepath': PosixPath('/home/oscar/Projects/SIPHRA_Testing/data/260225/SB_1_SiPM_Ch1-4_Ch2_Ch5_8_Ch14_Background.csv'),\n",
+       " 'metadataFile': PosixPath('/home/oscar/Projects/SIPHRA_Testing/data/260225/1_SiPM_Ch1-4_Ch2_Ch5_8_Ch14_Background.json'),\n",
+       " 'active_chs': [2, 14],\n",
+       " 'exposure': 1,\n",
+       " 'sipm_chs': ['Ch1-4 to Ch2', 'Ch5-8 to Ch14'],\n",
+       " 'n_events': 250000,\n",
+       " 'name': None}"
       ]
      },
      "execution_count": 4,
@@ -78,7 +83,7 @@
     }
    ],
    "source": [
-    "acq1.active_chs"
+    "vars(acq1)"
    ]
   }
  ],
