Improvements on repo structure and minor corrections to processing files

--- a/noteboks/22Na_60Co_bg-subtraction_calib.ipynb
+++ b/noteboks/22Na_60Co_bg-subtraction_calib.ipynb
@@ -37,7 +37,8 @@
     "project_root = str(ipynbname.path().parent.parent)\n",
     "sys.path.append(project_root)\n",
     "\n",
-    "from processing import SiphraAcquisition, fit_peak_expbg"
+    "from processing import SiphraAcquisition\n",
+    "from analysis import fit_peak_expbg"
    ]
   },
   {
