--- a/noteboks/etcTests/siphraAcq_test_json.ipynb
+++ b/noteboks/etcTests/siphraAcq_test_json.ipynb
@@ -44,15 +44,7 @@
    "execution_count": 3,
    "id": "e4fb3482-e47a-44a1-b36f-f4a89dd908b9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "exposure_sec=1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Datasets \n",
     "\n",
@@ -71,7 +63,7 @@
        "{'filepath': PosixPath('/home/oscar/Projects/SIPHRA_Testing/data/260225/SB_1_SiPM_Ch1-4_Ch2_Ch5_8_Ch14_Background.csv'),\n",
        " 'metadataFile': PosixPath('/home/oscar/Projects/SIPHRA_Testing/data/260225/1_SiPM_Ch1-4_Ch2_Ch5_8_Ch14_Background.json'),\n",
        " 'active_chs': [2, 14],\n",
-       " 'exposure': 1,\n",
+       " 'exposure': 129.73262667655945,\n",
        " 'sipm_chs': ['Ch1-4 to Ch2', 'Ch5-8 to Ch14'],\n",
        " 'n_events': 250000,\n",
        " 'name': None}"
@@ -85,6 +77,14 @@
    "source": [
     "vars(acq1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ace8361-b67e-4a94-baf7-f40e7658529d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
