Updated help in acquire.py

--- a/noteboks/etcTests/siphraAcq_test_json.ipynb
+++ b/noteboks/etcTests/siphraAcq_test_json.ipynb
@@ -80,11 +80,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5ace8361-b67e-4a94-baf7-f40e7658529d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2: array([200., 109., 125., ...,  55.,  49.,  59.], shape=(249910,)),\n",
+       " 14: array([151.,  33., 117., ...,   1.,   0.,   8.], shape=(249910,))}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acq1['a']"
+   ]
   }
  ],
  "metadata": {
